--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.alibaba:fastjson:1.1.55.android'
     compile 'com.youth.banner:banner:1.4.9'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.iwgang:countdownview:2.1.3'
 }
