--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.youth.banner:banner:1.4.9'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.iwgang:countdownview:2.1.3'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
