--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.iwgang:countdownview:2.1.3'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile files('libs/alipaySdk-20160809.jar')
+    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+    compile 'com.android.support:percent:25.1.0'
+
 }
