--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     compile files('libs/alipaySdk-20160809.jar')
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'com.android.support:percent:25.1.0'
-
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.linsea:opendanmaku:1.0.0@aar'
+    compile project(':gradationscroll')
 }
