--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
+
 
 android {
     compileSdkVersion 25
@@ -10,6 +12,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    //greendao配置
+    greendao {
+        //版本号，升级时可配置
+        schemaVersion 1
+        daoPackage 'com.atguigu.shappingmall_1020.dao'
+        targetGenDir 'src/main/java'
     }
     buildTypes {
         release {
@@ -23,6 +32,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
+
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
@@ -40,4 +50,11 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.linsea:opendanmaku:1.0.0@aar'
     compile project(':gradationscroll')
+    compile 'cn.yipianfengye.android:zxing-library:2.1'
+    compile 'com.jakewharton:butterknife:5.1.1'
+    compile files('libs/Msc.jar')
+    compile files('libs/Sunflower.jar')
+    //greendao依赖
+    compile 'org.greenrobot:greendao:3.2.0'
+    compile 'com.zhy:flowlayout-lib:1.0.3'
 }
